==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/nxp/src/tim/implementation_1/hal_ll_tim.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_tim.h"
#include "hal_ll_tim_pin_map.h"
#include "hal_ll_rcc.h"
#define HAL_LL_TIM_CHANNEL_COUNT            8
#define HAL_LL_TIM_SOPT1                    0x80000UL
#define HAL_LL_TIM0_SIM_SCGC6               0x1000000UL
#define HAL_LL_TIM1_SIM_SCGC6               0x2000000UL
#define HAL_LL_TIM2_SIM_SCGC6               0x4000000UL
#define HAL_LL_TIM3_SIM_SCGC6               0x40UL
#define HAL_LL_TIM_SIM_SCGC6_DEFAULT        0x1UL
#define HAL_LL_TIM0_SIM_SCGC6               0x61000001UL
#define HAL_LL_TIM1_SIM_SCGC6               0x62000001UL
#define HAL_LL_TIM2_SIM_SCGC6               0x64000001UL
#define HAL_LL_TIM3_SIM_SCGC6               0x60000001UL
#define HAL_LL_TIM_SIM_SCGC6_DEFAULT        0x40000001UL
#define HAL_LL_TIM2_SIM_SCGC3               0x1000000UL
#define HAL_LL_TIM3_SIM_SCGC3               0x2000000UL
#define HAL_LL_TIM_SIM_SCGC3_DEFAULT        0x0UL
#define HAL_LL_TIM_SIM_SCGC5_PORTA          0x200UL
#define HAL_LL_TIM_SIM_SCGC5_PORTB          0x400UL
#define HAL_LL_TIM_SIM_SCGC5_PORTC          0x800UL
#define HAL_LL_TIM_SIM_SCGC5_PORTD          0x1000UL
#define HAL_LL_TIM_SIM_SCGC5_PORTE          0x2000UL
#define HAL_LL_TIM_MODE_FTMEN               0U
#define HAL_LL_TIM_MODE_FTMEN_MASK          0x1UL
#define HAL_LL_TIM_MODE_WPDIS               2U
#define HAL_LL_TIM_RESET_MODE_REGISTER      4
#define HAL_LL_TIM_SC_PS_MASK               0x7UL
#define HAL_LL_TIM_SC_PS_SHIFT              0

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map,
                                                                uint8_t *hal_module_id ) {

    uint8_t index;
    uint16_t pin_check_result;

    if ( HAL_LL_PIN_NC == ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( pin != hal_ll_tim_hw_specifics_map[ pin_check_result ].config.pin ){
        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );

        _hal_ll_tim_map_pin( pin_check_result, index );

        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );

        handle_map[ pin_check_result ].init_ll_state = false;

        hal_ll_module_state[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ].hal_ll_tim_handle = ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;

}

hal_ll_err_t hal_ll_module_configure_tim( handle_t *handle ) {

    uint8_t index;
    uint16_t pin_check_result;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    if ( HAL_LL_PIN_NC == ( pin_check_result = _hal_ll_tim_check_pin( hal_ll_tim_hw_specifics_map_local->config.pin, &index, (void *)0 ) ) ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = (handle_t *)&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    return HAL_LL_TIM_SUCCESS;

}

void hal_ll_tim_close( handle_t *handle ) {

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_tim_get_module_state_address);

    if( NULL != low_level_handle->hal_ll_tim_handle ) {
        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;

        _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_local, false );
        _hal_ll_tim_set_clock( hal_ll_tim_hw_specifics_map_local->base, false );

        hal_ll_tim_hw_specifics_map_local->config.pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.channel = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.af = NULL;
    }
}

static void _hal_ll_tim_hw_init( hal_ll_tim_hw_specifics_map_t *map ) {
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( map->base );

    set_reg_bit(&hal_ll_hw_reg->mode, HAL_LL_TIM_MODE_FTMEN );

    hal_ll_hw_reg->sc &= ~HAL_LL_TIM_SC_PS_MASK;
    hal_ll_hw_reg->sc |= (0 << HAL_LL_TIM_SC_PS_SHIFT) & HAL_LL_TIM_SC_PS_MASK;

    _hal_ll_tim_hw_init_set_sync_mode(hal_ll_hw_reg);

    hal_ll_hw_reg->conf &= ~HAL_LL_TIM_CONF_NUMTOF_MASK;
    hal_ll_hw_reg->conf |= (0<<HAL_LL_TIM_CONF_NUMTOF_SHIFT) & HAL_LL_TIM_CONF_NUMTOF_MASK;

    set_reg_bit(&hal_ll_hw_reg->mode, HAL_LL_TIM_MODE_WPDIS);

    hal_ll_hw_reg->conf &= ~HAL_LL_CONF_BDMMODE_MASK;
    hal_ll_hw_reg->conf |= (0<<HAL_LL_CONF_BDMMODE_SHIFT) & HAL_LL_CONF_BDMMODE_MASK;

    hal_ll_hw_reg->sc &= ~HAL_LL_TIM_SC_PS_MASK;
    hal_ll_hw_reg->sc |= (1 << HAL_LL_TIM_SC_PS_SHIFT) & HAL_LL_TIM_SC_PS_MASK;
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {
    _hal_ll_tim_gate_control( map->config.pin );

    _hal_ll_tim_set_clock( map->base, true );

    _hal_ll_tim_alternate_functions_set_state( map, true );

    _hal_ll_tim_restart_register( map );

    _hal_ll_tim_hw_init( map );
}
